--- a/src/routes/app.css
+++ b/src/routes/app.css
@@ -2,7 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,800;0,900;1,600&display=swap');
+
 @layer components {
+	:root {
+		font-family: 'Poppins', sans-serif;
+		font-size: 16px;
+	}
+
 	h1 {
 		@apply text-4xl;
 	}
